force-app/main/default/objects/Individual_Plan_Unit_Requirement__c/Individual_Plan_Unit_Requirement__c.object-meta.xml
<CustomObject>
    <description>The requirement status for a unit of study for an individual program enrollment.</description>
    <label>Individual Plan Unit Requirement</label>
    <nameField>
        <label>Individual Plan Unit Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Individual Plan Unit Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>