force-app/main/default/objects/Individual_Plan_Unit_Requirement__c/fields/Field_Matching_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Matching_Value__c</fullName>
    <description>The expected value to be matched.</description>
    <inlineHelpText>The expected value to be matched.</inlineHelpText>
    <label>Field Matching Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>