force-app/main/default/objects/Individual_Plan_Unit_Requirement__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>The field API name for individual program enrollment.</description>
    <inlineHelpText>The field API name for individual program enrollment.</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>