force-app/main/default/objects/Individual_Plan_Unit_Requirement__c/fields/Individual_Plan_Unit__c.field-meta.xml
<CustomField>
    <fullName>Individual_Plan_Unit__c</fullName>
    <label>Individual Plan Unit</label>
    <referenceTo>Individual_Plan_Structure__c</referenceTo>
    <relationshipLabel>Individual Plan Unit Requirements</relationshipLabel>
    <relationshipName>Individual_Plan_Unit_Requirements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>