force-app/main/default/objects/Individual_Plan_Unit_Requirement__c/fields/Master_Individual_Program_Enrollment_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Individual_Program_Enrollment_Id__c</fullName>
    <description>The related master individual program enrollment 18 characters id.</description>
    <formula>IF(
	NOT(ISBLANK(Individual_Plan_Unit__r.Individual_Program_Enrollment__r.Master_Enrollment__c)),
	CASESAFEID(Individual_Plan_Unit__r.Individual_Program_Enrollment__r.Master_Enrollment__c),
	CASESAFEID(Individual_Plan_Unit__r.Individual_Program_Enrollment__c)
)</formula>
    <inlineHelpText>The related master individual program enrollment 18 characters id.</inlineHelpText>
    <label>Master Individual Program Enrollment Id</label>
    <type>Text</type>
</CustomField>