force-app/main/default/objects/Individual_Plan_Unit_Requirement__c/fields/Required_Study_Unit__c.field-meta.xml
<CustomField>
    <fullName>Required_Study_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Required Study Unit</label>
    <referenceTo>Study_Unit__c</referenceTo>
    <relationshipLabel>Individual Plan Unit Requirements</relationshipLabel>
    <relationshipName>Individual_Plan_Unit_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>