force-app/main/default/objects/Individual_Plan_Unit_Requirement__c/fields/Requirement_ID__c.field-meta.xml
<CustomField>
    <fullName>Requirement_ID__c</fullName>
    <label>Requirement ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>