force-app/main/default/objects/Individual_Plan_Unit_Requirement__c/fields/Requirement_Met__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requirement Met</label>
    <type>Checkbox</type>
</CustomField>